--- a/arduino/Makefile-template
+++ b/arduino/Makefile-template
@@ -1,5 +1,9 @@
+ARDUINO_DIR   = /usr/share/arduino
+ARDMK_DIR     = /usr
+AVR_TOOLS_DIR = /usr
 
-BOARD_TAG    = uno
+BOARD_TAG     = uno
+ARDUINO_PORT  = /dev/ttyACM0
 MONITOR_PORT  = /dev/ttyACM0
 
 include /usr/share/arduino/Arduino.mk
