Removal of some commented code and stuff like that. Added library line to Makefile.template.

--- a/arduino/Makefile-template
+++ b/arduino/Makefile-template
@@ -6,4 +6,6 @@ BOARD_TAG     = uno
 ARDUINO_PORT  = /dev/ttyACM0
 MONITOR_PORT  = /dev/ttyACM0
 
+ARDUINO_LIBS  = ArduinoThread
+
 include /usr/share/arduino/Arduino.mk
